2007-06-20  Marcus Brinkmann  <marcus@g10code.de>

	* po: New directory.
	* m4/po.m4: New file, from gettext-0.16.1.
	* m4/progtest.m4: New file, from gettext-0.16.1.
	* m4/nls.m4: New file, from gettext-0.16.1.
	* Makefile.am (SUBDIRS): Add po.
	* configure.ac: Invoke AM_PO_SUBDIRS.
	(AC_CONFIG_FILES): Add po/Makefile.in.

	* src/installer.nsi: Do not insert MUI_LANGUAGE "German".
	* src/gpg4win.nsi, src/gpg4win-src.nsi: Add include dir
	${TOP_SRCDIR}/po.  Include "../po/catalogs.nsi".
	* src/inst-gnupg.nsi: Move translation string DESC_Menu_gnupg_faq
	from here ...	
	* src/inst-gpg4win.nsi: ... to here.

	* src/g4wihelp.nsi, src/installer.nsi, src/inst-eudoragpg.nsi,
	src/inst-gnupg.nsi, src/inst-gpa.nsi, src/inst-gpg4win.nsi,
	src/inst-gpgee.nsi, src/inst-gpgol.nsi,
	src/inst-man_advanced_de.nsi, src/inst-man_advanced_en.nsi,
	src/inst-man_novice_de.nsi, src/inst-man_novice_en.nsi,
	src/inst-sylpheed-claws.nsi, src/inst-winpt.nsi: Remove German
	translation.
	
2007-06-18  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-w32pth.nsi: Install shared library.
	* src/uninst-w32pth.nsi: Uninstall shared library.

	* src/inst-gnupg2.nsi: Install gpgconf.exe.
	* src/uninst-gnupg2.nsi: Uninstall gpgconf.exe.

	* src/inst-sections.nsi: Add dependency management for GnuPG2.

2007-06-15  Werner Koch  <wk@g10code.com>

	* src/gpg4win.mk.in: Add cruel hack to support gnupg2.

	* src/Makefile.am: Use --silent with most configure runs.
	(gpg4win_pkg_gnupg2_post_install): New.

	* src/uninst-gnupg2.nsi, src/inst-libgnupg2.nsi: New.
	* src/uninst-libassun.nsi, src/inst-libassuan.nsi: New.
	* src/inst-libksba.nsi, src/uninst-libksba.nsi: New.
	* src/inst-libgcrypt.nsi, src/uninst-libgcrypt.nsi: New.
	* src/inst-sections.nsi: Include new installation scripts.a
	* include/config.nsi.in: Add definitions for new packages.

	* src/uninst-gnupg.nsi: Fix removal of gpgkeys helper.

2007-06-12  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpgwrap.c (main): Call _spawnv, not execv.
