@@ -193,6 +193,7 @@ GPG4WIN_SPKG([gnupg], [libiconv])
 GPG4WIN_SPKG([gnupg2], [libiconv libgcrypt libksba libassuan libgpg-error dnl
                         w32pth zlib])
 GPG4WIN_SPKG([pthreads-w32])
+GPG4WIN_SPKG([pinentry])
 GPG4WIN_SPKG([gpgol], [gpgme])
 GPG4WIN_SPKG([gpa], [libiconv gettext zlib gtk+ libpng glib gpgme])
 GPG4WIN_SPKG([winpt], [gpgme gnupg])
